Progress on weakly consistent reads